# WeatherForecastApp

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: global_variables.py  routes.py  utils.py
app/static/scripts/: gridjs.umd.js
app/static/styles/: main.css
app/templates/: about.html.jinja  base.html.jinja  index.html.jinja  sampledata.html.jinja
